fix tabs not having a gap like favourites

--- a/AlanWalkerTheme/visual-refresh/plugins.css
+++ b/AlanWalkerTheme/visual-refresh/plugins.css
@@ -451,6 +451,9 @@ body .pc-notices .pc-notice-container {
         }
       }
     }
+    .channelTabs-tabNav + div[style] {
+      gap: 5px;
+    }
   }
 }
 /*PingNotification*/
